k8s/prueba-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: proxy-pod
spec:
  containers:
  - name: curl-container
    image: curlimages/curl:latest
    command: ["sleep", "3600"]
