k8s/mi-microservicio-intermediariopagos.yaml
apiVersion: v1
kind: Service
metadata:
  name: microservicio-intermediariopagos
spec:
  type: ExternalName
  externalName: 20.241.212.100
  ports:
  - port: 3001
    protocol: TCP
