k8s/microservicio-gestion-socios.yaml
apiVersion: v1
kind: Service
metadata:
  name: microservicio-gestion-socios
spec:
  type: ExternalName
  externalName: 52.249.209.219
  ports:
  - port: 3002
    protocol: TCP
