k8s/microservicio-pagos-actuales.yaml
apiVersion: v1
kind: Service
metadata:
  name: microservicio-pagos-actuales
spec:
  type: ExternalName
  externalName: 20.72.169.32
  ports:
  - port: 3004
    protocol: TCP
