k8s/microservicio-pagos-pendientes.yaml
apiVersion: v1
kind: Service
metadata:
  name: microservicio-pagos-pendientes
spec:
  type: ClusterIP
  ports:
  - port: 3003
    targetPort: 3003
